--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         <p class="u-small-text u-text u-text-variant u-text-1">codearpuzzle.my.id | Universitas Majalengka</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/landing-page" target="_blank">
+      <a class="u-link" href="http://codearpuzzle.my.id/" target="_blank">
         <span>Landing Page</span>
       </a>
       <p class="u-text">
         <span>created with</span>
       </p>
       <a class="u-link" href="" target="_blank">
-        <span>Offline Website Builder Software</span>
+        <span>Love</span>
       </a>. 
     </section>
   
