--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         <p class="u-align-center u-large-text u-text u-text-body-alt-color u-text-variant u-text-2">Learn Code Without Limit</p>
         <a href="https://drive.google.com/drive/folders/1eQSSwZvmtTjedBqKG0oEqNnksgFWAPlP?usp=sharing" class="u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-3-base u-radius-50 u-btn-1">DOWNLOAD MARKER FINAL VERSION</a>
         <h4 class="u-align-center u-text u-text-white u-text-3">Recommended Specs For Getting The Most Out Of CODE AUGMENTED REALITY PUZZLE With Marker Android 10 or Above</h4>
-        <a href="https://drive.google.com/drive/folders/1Y7yAylOBKy4dw4X3c7rpYdNKNHJnJZrA?usp=share_link" class="u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-3-base u-radius-50 u-btn-2">DOWNLOAD MARKLESS UNDER DEVELOPMENT VERSION</a>
+        <a href="https://drive.google.com/drive/folders/1Y7yAylOBKy4dw4X3c7rpYdNKNHJnJZrA?usp=share_link" class="u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-3-base u-radius-50 u-btn-2">DOWNLOAD MARKLESS VERSION</a>
         <h4 class="u-align-center u-text u-text-white u-text-3">Recommended Specs For Getting The Most Out Of CODE AUGMENTED REALITY PUZZLE Without Marker Android 12 or Above</h4>
       </div>
     </section>
